base/src/test/resources/failure/patterns/split-on-nondata.aya.txt
In file $FILE:3:3 ->

  1 |   open data Unit | unit
  2 |   def test (a : Type) : Type
  3 |    | unit y => a
    |      ^----^

Error: Cannot split on a non-inductive type
         Type 0
       with a constructor pattern
         unit y

1 error(s), 0 warning(s).
What are you doing?
